スケジュールアプリ3回目提出

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,9 +1,9 @@
 ja:
   activerecord:
     models:
-      user: ユーザー
+      post: ユーザー
     attributes:
-      user:
+      post:
         title: タイトル
         start_date: 開始日
         end_date: 終了日
